--- a/style.css
+++ b/style.css
@@ -1,12 +1,21 @@
 body {
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     display: flex;
     flex-direction: column;
     margin: 0;
+    height: 100vh;
 }
 
 .header, 
 .footer {
     background-color: #1F2937;
+    display: flex;
+}
+
+.header {
+    justify-content: space-between;
+    align-items: center;
+    padding: 16px 15%;
 }
 
 .hero-text,
@@ -20,25 +29,50 @@ body {
     text-decoration: none;
 }
 
+.header ul {
+    display: flex;
+    list-style-type: none;
+    gap: 25px;
+}
 .logo {
     color: #F9FAF8;
     font-size: 24px;
 }
 
 .hero {
-    background-color: #1F2937; 
+    background-color: #1F2937;
+    display: flex;
+    justify-content: center; 
+    gap: 16px;
+    padding: 16px 15%;
 }
 
 .hero-text h1 {
     color: #F9FAF8;
     font-size: 48px;
     font-weight: extra-bold;
+    padding: 8px;
+    margin: 0;
+}
+
+.hero-image {
+    color: #fff;
+    background-color: #555;
+    height: 200px;
+    width: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 0;
 }
 
 .random-info {
     display: flex;
+    flex: 1;
     flex-direction: column;
     align-items: center;
+    padding: 50px;
+    gap: 25px;
 }
 
 .random-title {
@@ -47,8 +81,30 @@ body {
     font-weight: extra-bold;
 }
 
+.random-cards {
+    display: flex;
+    justify-content: center;
+    gap: 25px;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 200px;
+    gap: 8px;
+}
+
+.card-image {
+    width: 100px;
+    height: 100px;
+    border-radius: 25px;
+    border: 3px solid #3882F6;
+}
+
 .quote {
     background-color: #E5E7EB;
+    padding: 50px 10%;
 }
 
 .quote blockquote {
@@ -58,15 +114,44 @@ body {
     font-style: italic;
 }
 
-.call-text, button {
+.quote p {
+    text-align: right;
+}
+
+.call, button {
     background-color:#3882F6;
     color: #fff;
 }
 
-.call-text button {
-    border-color: #fff;
+.call {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 25px;
+    padding: 25px;
+    margin: 5% 15%;
+}
+
+button {
+    border-radius: 16px;
+    border: none;
+    padding: 4px 16px 4px 16px;
+}
+
+.call button {
+    border: 2px solid #fff;
+}
+
+button:hover {
+    color:#3882F6;
+    background-color:#fff;
+}
+
+.call button:hover {
+    border-color: #3882F6;
 }
 
 .footer{
-
+    justify-content: center;
+    padding: 16px;
 }
