--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,300&display=swap');
+
 body {
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Roboto', Arial, Helvetica, sans-serif;
     display: flex;
     flex-direction: column;
     margin: 0;
@@ -44,7 +46,7 @@ body {
     display: flex;
     justify-content: center; 
     gap: 16px;
-    padding: 16px 15%;
+    padding: 16px 15% 100px 15%;
 }
 
 .hero-text h1 {
@@ -71,7 +73,7 @@ body {
     flex: 1;
     flex-direction: column;
     align-items: center;
-    padding: 50px;
+    padding: 50px 50px 100px 50px;
     gap: 25px;
 }
 
@@ -116,6 +118,8 @@ body {
 
 .quote p {
     text-align: right;
+    font-size: 20px;
+    font-weight: bold;
 }
 
 .call, button {
@@ -133,9 +137,11 @@ body {
 }
 
 button {
-    border-radius: 16px;
+    border-radius: 8px;
     border: none;
     padding: 4px 16px 4px 16px;
+    font-size: 18px;
+    font-weight: bold;
 }
 
 .call button {
